:alien: Fixes #127 -- Adapted styles to new PerfectScrollbar
classnames were changed to fit BEM better, so our styling overrides were no longer picked up

--- a/src/sass/partials/_perfect_scrollbar.scss
+++ b/src/sass/partials/_perfect_scrollbar.scss
@@ -1,107 +1,71 @@
+@import 'perfect-scrollbar/css/perfect-scrollbar';
+
 // Colors
 $ps-rail-hover: $main-blue;
 $ps-bar-default: $main-green;
 $ps-bar-hover: $main-green;
 
-// Scrollbar mixins
-@mixin scrollbar-rail-default {
-  display: none;
-  position: absolute; /* please don't change 'position' */
-  @include border-radius(4px);
-  opacity: 0;
-  @include transition(background-color .2s linear, opacity .2s linear);
-}
+$ps-rail-width: 8px;
+$ps-rail-offset: 3px;
 
-@mixin scrollbar-rail-hover {
-  background-color: $ps-rail-hover;
-  opacity: 0.9;
-}
+.ps {
+  & &__rail-x,
+  & &__rail-y {
+    background-color: $ps-rail-hover;
 
-@mixin scrollbar-default {
-  position: absolute; /* please don't change 'position' */
-  background-color: $ps-bar-default;
-  @include border-radius(4px);
-  @include transition(background-color .2s linear);
-}
-
-@mixin scrollbar-hover {
-  background-color: $ps-bar-hover;
-}
-
-@mixin in-scrolling {
-  &.ps-in-scrolling {
-    pointer-events: none;
-    &.ps-x>.ps-scrollbar-x-rail{
-      @include scrollbar-rail-hover;
-      >.ps-scrollbar-x {
-        @include scrollbar-hover;
-      }
+    &:hover,
+    &:focus,
+    &.ps--clicking {
+      background-color: $ps-rail-hover;
     }
-    &.ps-y>.ps-scrollbar-y-rail {
-      @include scrollbar-rail-hover;
-      >.ps-scrollbar-y {
-        @include scrollbar-hover;
+  }
+
+  & &__rail-y {
+    width: $ps-rail-width;
+    right: $ps-rail-offset;
+    border-radius: 4px;
+
+    &:hover,
+    &:focus,
+    &.ps--clicking {
+      .ps__thumb-y {
+        background-color: $ps-bar-hover;
+        width: $ps-rail-width;
+        right: 0;
       }
     }
   }
+
+  & &__rail-x {
+    height: $ps-rail-width;
+    bottom: $ps-rail-offset;
+    border-radius: 4px;
+
+    &:hover,
+    &:focus,
+    &.ps--clicking {
+      .ps__thumb-x {
+        background-color: $ps-bar-hover;
+        height: $ps-rail-width;
+        bottom: 0;
+      }
+    }
+  }
+
+  &__thumb-y {
+    background-color: $ps-bar-default;
+    width: $ps-rail-width;
+    right: 0;
+  }
+
+  &__thumb-x {
+    background-color: $ps-bar-default;
+    height: $ps-rail-width;
+    bottom: 0;
+  }
 }
 
-.ps-container {
-  overflow: hidden !important;
 
-  &.ps-active-x > .ps-scrollbar-x-rail,
-  &.ps-active-y > .ps-scrollbar-y-rail {
-    display: block;
-  }
-
-  @include in-scrolling;
-
-  >.ps-scrollbar-x-rail {
-    @include scrollbar-rail-default;
-    bottom: 3px; /* there must be 'bottom' for ps-scrollbar-x-rail */
-    height: 8px;
-
-    >.ps-scrollbar-x {
-      @include scrollbar-default;
-      bottom: 0; /* there must be 'bottom' for ps-scrollbar-x */
-      height: 8px;
-    }
-  }
-
-  >.ps-scrollbar-y-rail {
-    @include scrollbar-rail-default;
-    right: 3px; /* there must be 'right' for ps-scrollbar-y-rail */
-    width: 8px;
-
-    >.ps-scrollbar-y {
-      @include scrollbar-default;
-      right: 0; /* there must be 'right' for ps-scrollbar-y */
-      width: 8px;
-    }
-  }
-
-  &:hover {
-    @include in-scrolling;
-
-    >.ps-scrollbar-x-rail,
-    >.ps-scrollbar-y-rail {
-      opacity: 0.6;
-    }
-
-    >.ps-scrollbar-x-rail:hover {
-      @include scrollbar-rail-hover;
-
-      >.ps-scrollbar-x {
-        @include scrollbar-hover;
-      }
-    }
-
-    >.ps-scrollbar-y-rail:hover {
-      @include scrollbar-rail-hover;
-
-      >.ps-scrollbar-y {
-        @include scrollbar-hover;
-      }
-    }
-  }
+.album-photo {
+  min-height: 300px;
 }
